--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,8 +9,11 @@
     function pageRedirect() {
       window.location.href = "/work";
     }
+    function pageRedirect1() {
+      window.location.href = "/";
+    }
 </script>
-<h1 class="heading">Tired of memorizing things you have to do in a day?</h1>
+<!-- <h1 class="heading">Tired of memorizing things you have to do in a day?</h1>
 <p>Dont worry I have the perfect solution for you. A To Do List which you can open anytime anywhere!</p>
 <p>Just add new tasks you want to do in a day by clicking the '+' button and you can also cut them by clicking on the checkbox once you are done with a particular task.
 </p>
@@ -19,7 +22,7 @@
     Just click the 'Go To Work List' button.
     </p>
 
-  <h3 class="heading3">Scroll Down</h3>
+  <h3 class="heading3">Scroll Down</h3> -->
 
 </head>
 
