--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <title>To Do List</title>
   <link rel="stylesheet" href="css/styles.css">
-  <script>
+  <!-- <script>
     function pageRedirect1() {
       window.location.href = "/";
     }
-</script>
+</script> -->
 <!-- <h1 class="heading">Tired of memorizing things you have to do in a day?</h1>
 <p>Dont worry I have the perfect solution for you. A To Do List which you can open anytime anywhere!</p>
 <p>Just add new tasks you want to do in a day by clicking the '+' button and you can also cut them by clicking on the checkbox once you are done with a particular task.
